feat: activate semantic release with travis

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@daraff/github-get-pull-request",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "",
   "main": "index.js",
   "bin": "cli.js",
@@ -9,5 +9,17 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "@octokit/rest": "^15.9.4"
+  },
+  "scripts": {
+    "semantic-release": "semantic-release",
+    "travis-deploy-once": "travis-deploy-once"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DaRaFF/github-get-pull-request.git"
+  },
+  "devDependencies": {
+    "semantic-release": "^15.10.6",
+    "travis-deploy-once": "^5.0.9"
   }
 }
